[package]
name = "aoc"
version = "0.1.0"
authors = ["Daniel Hunt", "Axel Lindeberg"]
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[profile.dev]
overflow-checks = false

[dependencies]
itertools = "0.10"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
log = "0.4.20"
regex = "1.10.2"
once_cell = "1.18.0"
aho-corasick = "1.1.2"
